gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/imports/a18243.d
version https://git-lfs.github.com/spec/v1
oid sha256:c0e766f01a1b45ddc21d82727f8ab6485443cff7a650d96360052c8701e8b42c
size 80
